--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Product Sans"; }
   body nav {
+    margin-bottom: 40px;
     border-bottom: 0.5px solid #eee; }
     body nav .navbar-brand img {
       width: auto;
@@ -38,9 +39,42 @@ body {
         body nav li.nav-item-button button.btn_kontak:hover span {
           font-size: 14px;
           color: white; }
-  body #hightlight {
+  body #hl {
     width: 100%;
     height: 450px;
     border-bottom: 0.5px solid #eee; }
+    body #hl h1 {
+      width: 250px; }
+      body #hl h1 span {
+        font-size: 48px;
+        color: #1c819d;
+        font-weight: bold;
+        letter-spacing: 2px; }
+    body #hl #garis {
+      margin: -20px 0px 20px 2px;
+      width: 120px;
+      height: 5px;
+      background-color: #ffbe00;
+      border-radius: 10px; }
+    body #hl h5 {
+      width: 75%;
+      text-align: justify;
+      margin-bottom: 20px; }
+      body #hl h5 span {
+        color: #1c819d;
+        opacity: 90%;
+        font-size: 18px; }
+    body #hl button.btn_hl {
+      border: 0.1px solid white;
+      background-color: #ffbe00;
+      padding: 4px 25px 4px 25px;
+      border-radius: 20px; }
+      body #hl button.btn_hl span {
+        font-size: 14px;
+        color: white;
+        text-transform: capitalize; }
+    body #hl .hl_img img {
+      width: auto;
+      height: 300px; }
 
 /*# sourceMappingURL=main.css.map */
