--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,7 +13,6 @@ body {
   font-family: $font-stack;
 
     nav {
-        margin-bottom: 40px;
         border-bottom: 0.5px solid #eee;
 
         .navbar-brand {
@@ -35,6 +34,7 @@ body {
                     letter-spacing: 1px;
                 }
             }
+
             a.nav-link:hover {
                 font-weight: bold;
 
@@ -77,58 +77,276 @@ body {
 
     #hl {
         width: 100%;
-        height: 450px;
-        border-bottom: 0.5px solid #eee;
+        height: auto;
+        margin: 60px 0px 60px 0px;
 
-        h1 {
-            width: 250px;
+        .img-hl {
+
+            margin: 0px 50px 0px 50px;
             
-            span {
-                font-size: 48px;
-                color: $biru;
-                font-weight: bold;
-                letter-spacing: 2px;
-            }
-        }
-
-        #garis {
-            margin: -20px 0px 20px 2px;
-            width:120px;
-            height:5px;
-            background-color: $kuning;
-            border-radius: 10px; 
-        }
-
-        h5 {
-            width: 75%;
-            text-align: justify;
-            margin-bottom: 20px;
-            span {
-                color: $biru;
-                opacity: 90%;
-                font-size: 18px;
-            }
-        }
-
-        button.btn_hl {
-            border: 0.1px solid white;
-            background-color: $kuning;
-            padding: 4px 25px 4px 25px;
-            border-radius: 20px;
-
-            span {
-                font-size: 14px;
-                color: white;
-                text-transform: capitalize;
-            }
-        }
-
-        .hl_img {
-
             img {
                 width: auto;
                 height: 300px;
             }
+        }
+
+        .text-hl {
+
+            margin-left: 75px;
+
+            h1 {
+                width: 450px;
+                
+                span {
+                    font-size: 52px;
+                    color: $biru;
+                    font-weight: bold;
+                    letter-spacing: 2px;
+                }
+            }
+
+            #garis {
+                margin: -20px 0px 20px 0px;
+                width:225px;
+                height:5px;
+                background-color: $kuning;
+                border-radius: 10px; 
+            }
+
+            h5 {
+                width: 75%;
+                font-size: 17px;
+                margin-bottom: 20px;
+                text-align: justify;
+                span {
+                    font-weight: bold;
+                }
+            }
+
+            a.btn_hl {
+                text-decoration: none;
+                background-color: $kuning;
+                padding: 8px 25px 8px 25px;
+                border-radius: 20px;
+
+                span {
+                    font-size: 14px;
+                    color: white;
+                    text-transform: capitalize;
+                }
+            }
+        }
+    }
+
+    #event {
+        width: 100%;
+        height: auto;
+        border-top: 0.5px solid #eeeeee;
+
+        .text-event {
+
+            text-align: center;
+            width: 100%;
+            margin-top: 20px;
+            margin-bottom: 20px;
+
+            h1 {
+                
+                span {
+                    font-size: 28px;
+                    color: $biru;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                }
+            }
+
+            #garis {
+                margin: 5px auto;
+                width:50px;
+                height:3px;
+                background-color: $kuning;
+                border-radius: 10px; 
+            }
+        }
+    }
+
+    #berita-himsi {
+        width: 100%;
+        height: auto;
+        border-top: 0.5px solid #eeeeee;
+
+        .text-berita {
+
+            text-align: center;
+            width: 100%;
+            margin-top: 20px;
+            margin-bottom: 40px;
+
+            h1 {
+                
+                span {
+                    font-size: 28px;
+                    color: $biru;
+                    letter-spacing: 2px;
+
+                    span {
+                        font-weight: bold;
+                    }
+                }
+            }
+
+            #garis {
+                margin: 5px auto;
+                width:90px;
+                height:3px;
+                background-color: $kuning;
+                border-radius: 10px; 
+            }
+        }
+
+        .content-berita {
+            width: 100%;
+            margin-bottom: 40px;
+
+            .card {
+                border-top-left-radius: $padding-10px;
+                border-top-right-radius: $padding-10px;
+                text-align: center;
+
+                .card-img-top {
+                    border-top-left-radius: $padding-10px;
+                    border-top-right-radius: $padding-10px;
+                }
+
+                .card-body {
+                    text-align: left;
+
+                    .jenis-berita {
+                        width: fit-content;
+                        height: auto;
+                        background-color: #eee;
+                        margin-bottom: 12px;
+                        border-radius: 3px;
+
+                        .jenis-berita-text {
+                            padding: 5px 10px 5px 10px;
+                            font-size: 12px;
+                            text-transform: uppercase;
+                            color: #1c819d;
+                            font-weight: bold;
+                        }
+
+                    }
+
+                    .card-title {
+                        font-weight: bold;
+                        font-size: 17px;
+                    }
+
+                    .card-text {
+                        font-size: 15px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;      
+                        -webkit-line-clamp: 4; 
+                        -webkit-box-orient: vertical;
+                    }
+
+                    .btn {
+                        font-size: 14px;
+                        background-color: #1c819d;
+                    }
+                }
+            }
+
+            .wrapper {
+                text-align: center;
+                margin-top: 40px;
+
+                a.btn-all-berita {
+                    background-color: $kuning;
+                    padding: 12px 30px 12px 30px;
+                    border-radius: 20px;
+                    text-decoration: none;
+    
+                    span {
+                        font-size: 14px;
+                        color: white;
+                        text-transform: capitalize;
+                        font-size: 15px;
+                    }
+                }
+                a.btn-all-berita:hover {
+                    background-color: white;
+                    border: 1px solid $kuning;
+                    
+                    span {
+                        color:$kuning;
+                    }
+                }
+            }
+        }
+    }
+    #footer {
+        width: 100%;
+        height: auto;
+        border-top: 0.5px solid #eeeeee;
+
+        .footer-desc {
+            margin: 0px 0px 0px 50px;
+            img {
+                margin: 40px 0px 15px 0px;
+            }
+            p {
+                width: 350px;
+                margin: 10px 0px 0px 0px;
+                text-align: justify;
+    
+                span {
+                    font-weight: bold;
+                }
+            }
+        }
+        .footer-follow {
+            margin: 40px 0px 15px 150px;
+            p {
+                width: 400px;
+                font-size: 23px;
+                text-transform: uppercase;
+                font-weight: bold;
+                color: $biru;
+            }
+
+            #garis {
+                width:80px;
+                height:3px;
+                background-color: $kuning;
+                border-radius: 10px; 
+                margin-top: -10px;
+            }
+
+            p.footer-sosmed {
+                margin: 25px 0px 35px 0px;
+
+                a {
+                    text-decoration: none;
+                    margin: 15px 5px 0px 5px;
+                    border-bottom: 1px solid #eee;
+                    font-size: 16px;
+                    min-width: 60px;
+                    padding:12px;
+                    color: $biru;
+                }
+
+                a:hover {
+                    color: #ffbe00;
+                }
+            }
+        }
+        p.footer-end {
+            text-align: center;
+            margin: 20px 0px 20px 0px;
+            color: grey;
         }
     }
 }
