--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -309,6 +309,12 @@ body {
                 border-radius: 10px; 
             }
         }
+
+        .content-berita {
+            width: 100%;
+            margin-bottom: 40px;
+            height: auto;
+        }
     }
 
     #footer {
