--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -383,6 +383,7 @@ body {
                 span {
                     color: $biru;
                     border-bottom: 1px solid $kuning;
+                    font-weight: bold;
                 }
             }
         }
@@ -518,7 +519,6 @@ body {
                 a {
                     text-decoration: none;
                     margin: 15px 5px 0px 5px;
-                    border-bottom: 1px solid #eee;
                     font-size: 16px;
                     min-width: 60px;
                     padding:12px;
