--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -297,6 +297,7 @@ body #profil-himsi .content-profil-himsi p {
 body #profil-himsi .content-profil-himsi p span {
   color: #1c819d;
   border-bottom: 1px solid #ffbe00;
+  font-weight: bold;
 }
 body #visi-misi-himsi {
   width: 100%;
@@ -392,7 +393,6 @@ body #footer #footer-follow div.footer-sosmed {
 body #footer #footer-follow div.footer-sosmed a {
   text-decoration: none;
   margin: 15px 5px 0px 5px;
-  border-bottom: 1px solid #eee;
   font-size: 16px;
   min-width: 60px;
   padding: 12px;
